Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
       "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from nbformat>=4.2->plotly==3.3.0) (2.6.0)\n",
       "Installing collected packages: plotly\n",
       "  Found existing installation: plotly 3.1.0\n",
-      "    Uninstalling plotly-3.1.0:\n"
+      "    Uninstalling plotly-3.1.0:\n",
+      "      Successfully uninstalled plotly-3.1.0\n"
      ]
     }
    ],
@@ -166,53 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "type": "bar",
-         "uid": "0ed14afe-d83b-11e9-be20-8f9ba21f04fb",
-         "x": [
-          "jack",
-          "jill",
-          "sandy"
-         ],
-         "y": [
-          8,
-          11,
-          10
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"98111d5b-f669-495d-8925-bb4e7666bd90\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"98111d5b-f669-495d-8925-bb4e7666bd90\", [{\"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"0ee9a9a0-d83b-11e9-be20-8f9ba21f04fb\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"98111d5b-f669-495d-8925-bb4e7666bd90\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"98111d5b-f669-495d-8925-bb4e7666bd90\", [{\"x\": [\"jack\", \"jill\", \"sandy\"], \"y\": [8, 11, 10], \"type\": \"bar\", \"uid\": \"0ee9a9a0-d83b-11e9-be20-8f9ba21f04fb\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plotly\n",
     "\n",
