--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,10 @@
       "Installing collected packages: plotly\n",
       "  Found existing installation: plotly 3.1.0\n",
       "    Uninstalling plotly-3.1.0:\n",
-      "      Successfully uninstalled plotly-3.1.0\n"
+      "      Successfully uninstalled plotly-3.1.0\n",
+      "Successfully installed plotly-3.3.0\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.2.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -189,63 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "type": "bar",
-         "uid": "0eee0a90-d83b-11e9-be20-8f9ba21f04fb",
-         "x": [
-          "jack",
-          "jill",
-          "sandy",
-          "blaise"
-         ],
-         "y": [
-          8,
-          11,
-          8,
-          13,
-          6,
-          4
-         ]
-        },
-        {
-         "type": "bar",
-         "uid": "0eee0c8e-d83b-11e9-be20-8f9ba21f04fb",
-         "x": [
-          "jack",
-          "jill",
-          "sandy",
-          "gob"
-         ],
-         "y": [
-          4,
-          12,
-          3,
-          14,
-          8,
-          1
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"ef16fc2f-8cdf-442c-993b-fa0ffcfaf99d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ef16fc2f-8cdf-442c-993b-fa0ffcfaf99d\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"0ef12324-d83b-11e9-be20-8f9ba21f04fb\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"0ef12518-d83b-11e9-be20-8f9ba21f04fb\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"ef16fc2f-8cdf-442c-993b-fa0ffcfaf99d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ef16fc2f-8cdf-442c-993b-fa0ffcfaf99d\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"0ef12324-d83b-11e9-be20-8f9ba21f04fb\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"0ef12518-d83b-11e9-be20-8f9ba21f04fb\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'blaise'], 'y': [8, 11, 8, 13, 6, 4]}\n",
     "trace1 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'gob'], 'y': [4, 12, 3, 14, 8, 1]}\n",
